backend/evaluation-service/k8s/evaluation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  labels:
    app: evaluation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          image: dragomir1401/evaluation-service:latest
          ports:
            - containerPort: 8080
