backend/evaluation-service/k8s/evaluation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-service-ingress
  annotations:
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /evaluation
            pathType: Prefix
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8080
